Fixed margin/padding issue for nav items on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,8 @@ input[type="button"].button-primary:focus {
 #header-nav-menu-mobile li { 
   border-top: 1px solid #ccc; 
   border-width: 1px 0;
+  margin-bottom: 0;
+  padding-bottom: 4%;
   padding-top: 4%;
 }
 
